<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SignUpConfirmationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btGotIt"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/you_re_all_done"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/descriptionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/hang_tight_we_are_currently_reviewing_your_account_and_will_follow_up_with_you_in_2_3_business_days_in_the_meantime_you_can_setup_your_inventory"
                android:textAlignment="center"
                android:textColor="@color/editTextHintColor"
                android:textSize="14sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/btGotIt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orangeThemeColor"
            android:paddingVertical="16dp"
            android:text="@string/got_it"
            android:textSize="18sp"
            android:textStyle="normal"
             android:layout_marginTop="16dp"
            android:layout_marginBottom="36dp"
             />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>