<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ForgetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FarmerEats"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/ForgotPassword"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="18dp"
                    android:id="@+id/createNewCL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/createNewFirstText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Rememberyourpasword"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/btLoginText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/Login"
                        android:textColor="@color/orangeThemeColor"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/createNewFirstText"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/phoneEditTextCL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/edit_text_rounded_background"
                    android:paddingHorizontal="15dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/editTextStartIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/phone_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailEditText"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:boxStrokeWidth="0dp"
                        app:helperTextEnabled="true"
                        app:hintEnabled="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"

                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/editTextStartIcon"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:maxLength="10"
                            android:id="@+id/textInputNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:hint="@string/phone_number"
                            android:textColorHint="@color/editTextHintColor"
                            android:text="" />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btSendCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:backgroundTint="@color/orangeThemeColor"
                    android:paddingVertical="16dp"
                    android:text="@string/send_code"
                    android:textSize="18sp"
                    android:textStyle="normal" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>