<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SignUpVerificationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <ScrollView
            android:id="@+id/scrollBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="24dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/buttonsCl"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FarmerEats"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="65dp"
                    android:text="@string/signupStep3of4"
                    android:textColor="@color/editTextHintColor"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/Verification"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/descriptionTv"
                    android:layout_marginTop="36dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/attached_proof_of_department_of_agriculture_registrations_i_e_florida_fresh_usda_approved_usda_organic"
                    android:textSize="14sp"
                    android:textColor="@color/editTextHintColor"
                    />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btAttachment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/attchmentDescriptionTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/attach_proof_of_registration" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/btCameraCl"
                        android:background="@drawable/rounded_background_orange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_margin="10dp"
                            android:id="@+id/btcamera"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/camera_icon"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/attachedRv"
                    android:layout_marginTop="24dp"
                    tools:itemCount="3"
                    tools:listitem="@layout/attachment_list_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonsCl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/half_circular_background"
            android:paddingHorizontal="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btGoBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/go_back_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btContinue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:backgroundTint="@color/orangeThemeColor"
                android:paddingVertical="16dp"
                android:text="@string/continueString"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btGoBack"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>