<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SignUpHoursFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <ScrollView
            android:id="@+id/scrollBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="24dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/buttonsCl"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/farmEatTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FarmerEats"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/step4Tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/step4Tv"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="65dp"
                    android:text="@string/signupStep4of4"
                    android:textColor="@color/editTextHintColor"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/businessHourTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/farmEatTv" />

                <TextView
                    android:id="@+id/businessHourTv"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/Business_Hours"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/descriptionTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/step4Tv" />

                <TextView
                    android:id="@+id/descriptionTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/choose_the_hours_your_farm_is_open_for_pickups_this_will_allow_customers_to_order_deliveries"
                    android:textAlignment="center"
                    android:textColor="@color/editTextHintColor"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/datePickerRv"
                    app:layout_constraintTop_toBottomOf="@+id/businessHourTv" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/datePickerRv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/timePickerRv"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTv"
                    tools:itemCount="1"
                    tools:listitem="@layout/date_rv_list_item" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/timePickerRv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/datePickerRv"
                    tools:itemCount="1"
                    tools:listitem="@layout/time_rv_list_item" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonsCl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/half_circular_background"
            android:paddingHorizontal="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btGoBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/go_back_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btContinue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:backgroundTint="@color/orangeThemeColor"
                android:paddingVertical="16dp"
                android:text="@string/signup"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btGoBack"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>